--- a/readme
+++ b/readme
@@ -1,1 +1,5 @@
-The collection of data requires different modules based on your EEG device. Contact me for Muse2 collection details if interested in MUSE2 EEG collection and analysis
+# BCI-centric research on MUSE devices
+## I have collated both of my sci-comm project which relates to BCI, I have not yet added the website I made on EEG history, may add soon
+1) BCI presentation on EEG technology
+2) Font research using EEG device 
+## The collection of data requires different modules based on your EEG device. Contact me for Muse2 collection details if interested in MUSE2 EEG collection and analysis
